# span-extructure

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
span_extructure/: __init__.py  main.py
tests/: test_span_extructure.py
